[XForms] XPath expressions using namespaces inside repeats generate error messages. Bug 312848, r=aaronr+smaug